added heading section

--- a/index.html
+++ b/index.html
@@ -5,14 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nexcent</title>
     <link rel="shortcut icon" href="style/image/Icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="style/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header section -->
     <header>
         <!-- Nav Section -->
-        <nav>
-            
+        <nav id="nav-bar">
+            <img src="style/image/Logo.png" alt="" id="nav-logo">
+
+            <ul class="ul-navbar">
+                <li><a href="#" >Home</a></li>
+                <li><a href="#" >Service</a></li>
+                <li><a href="#" >Feature</a></li>
+                <li><a href="#" >Product</a></li>
+                <li><a href="#" >Testimonial</a></li>
+                <li><a href="#" >FAQ</a></li>
+            </ul>            
+            <div>
+                <button id="navbar-logIn-button">Login</button>
+                <button id="navbar-signUp-button" >Sign Up</button>
+            </div>
         </nav>
+        <!-- hero section -->
+        <div id="hero">
+            <div>
+                <h1 class="hero-heading">Lessons and insights <br><span> from 8 years</span></h1>
+               <p id="hero-pragraph">Where to grow your business as a photographer: site or social media ?</p>
+               <button class="button">Register</button>
+            </div>
+            <div>
+                <img src="style/image/Illustration.png" alt="">
+            </div>
+
+        </div>
 
     </header>
     <!-- Main Section -->
