added client section

--- a/index.html
+++ b/index.html
@@ -40,12 +40,26 @@
             <div>
                 <img src="style/image/Illustration.png" alt="">
             </div>
-
         </div>
-
     </header>
     <!-- Main Section -->
     <main>
+        <!-- clients section -->
+        <div id="client">
+            <div>
+                <h3 id="client-heading">Our Clients</h3>
+                <p>We have been working with some Fortune 500+ clients</p>
+            </div>
+            <div id="client-allicon">
+                <div ><img class="client-icon" src="style/client-icon/111.png" alt=""></div>
+                <div><img class="client-icon" src="style/client-icon/222.png" alt=""></div>
+                <div><img class="client-icon" src="style/client-icon/333.png" alt=""></div>
+                <div><img class="client-icon" src="style/client-icon/444.png" alt=""></div>
+                <div><img class="client-icon" src="style/client-icon/111.png" alt=""></div>
+                <div><img class="client-icon" src="style/client-icon/222.png" alt=""></div>
+                <div><img class="client-icon" src="style/client-icon/444.png" alt=""></div>
+            </div>
+        </div>
 
     </main>
     <!-- Footer Section -->
