added community section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,34 @@
             </div>
         </div>
 
+        <!-- community section -->
+        <div id="community">
+            <div>
+                <h4 id="community-heading">Manage your entire community <br> in a single system</h4>
+                <p>Who is Nextcent suitable for?
+                </p>
+            </div>
+            <div id="community-allcard">
+                <div class="community-card">
+                    <img src="style/comminity text/Icon.png" alt="">
+                    <h4 class="community-card-heading">Membership Organisations</h4>
+                    <p>Our membership management software provides full automation of membership renewals and payments</p>
+                </div>
+                <div class="community-card">
+                    <img src="style/comminity text/Icon.png" alt="">
+                    <h4 class="community-card-heading">National Associations</h4>
+                    <p>Our membership management software provides full automation of membership renewals and payments</p>
+                </div>
+                <div class="community-card">
+                    <img src="style/comminity text/Icon.png" alt="">
+                    <h4 class="community-card-heading">Clubs And Groups</h4>
+                    <p>Our membership management software provides full automation of membership renewals and payments</p>
+                </div>
+                
+            </div>
+        </div>
+
+
     </main>
     <!-- Footer Section -->
     <footer>
