added pixelgrade section

--- a/index.html
+++ b/index.html
@@ -72,22 +72,33 @@
                 <div class="community-card">
                     <img src="style/comminity text/Icon.png" alt="">
                     <h4 class="community-card-heading">Membership Organisations</h4>
-                    <p>Our membership management software provides full automation of membership renewals and payments</p>
+                    <p class="community-card-pragraph" >Our membership management software provides full automation of membership renewals and payments</p>
                 </div>
                 <div class="community-card">
                     <img src="style/comminity text/Icon.png" alt="">
                     <h4 class="community-card-heading">National Associations</h4>
-                    <p>Our membership management software provides full automation of membership renewals and payments</p>
+                    <p class="community-card-pragraph">Our membership management software provides full automation of membership renewals and payments</p>
                 </div>
                 <div class="community-card">
                     <img src="style/comminity text/Icon.png" alt="">
                     <h4 class="community-card-heading">Clubs And Groups</h4>
-                    <p>Our membership management software provides full automation of membership renewals and payments</p>
+                    <p class="community-card-pragraph">Our membership management software provides full automation of membership renewals and payments</p>
                 </div>
                 
             </div>
         </div>
 
+        <!-- Pixelgrade section -->
+        <div id="pixelgrade">
+            <div>
+                <img id="pixelgrade-img" src="style/image/Frame 35.png" alt="">
+            </div>
+            <div id="pixelgrade-text">
+                <h3 id="pixelgrade-heading">The unseen of spending three years at Pixelgrade</h3>
+                <p id="pixelgrade-pragraph"><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</small></p>
+                <button class="button">Learn More</button>
+            </div>
+        </div>
 
     </main>
     <!-- Footer Section -->
