added local business section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,52 @@
             </div>
         </div>
 
+        <!-- Local business section -->
+        <div id="business">
+            <div>
+                <h3 id="business-heading">Helping a local <br> <span>business reinvent itself</span></h3>
+                <p><small>We reached here with our hard work and dedication</small></p>
+            </div>
+            <div id="business-allcomponent">
+                <div class="business-component" >
+                    <div>
+                        <img src="style/Local business section/Icon.png" alt="">
+                    </div>
+                    <div>
+                        <h4>2,245,341</h4>
+                        <p><small>Members</small></p>
+                    </div>
+                </div>
+                <div class="business-component">
+                    <div>
+                        <img src="style/Local business section/Icon (1).png" alt="">
+                    </div>
+                    <div>
+                        <h4>46,348</h4>
+                        <p><small>clubs</small></p>
+                    </div>
+                </div>
+                <div class="business-component">
+                    <div>
+                        <img src="style/Local business section/Icon (2).png" alt="">
+                    </div>
+                    <div>
+                        <h4>828,867</h4>
+                        <p><small>Event Bookings</small></p>
+                    </div>
+                </div>
+                <div class="business-component">
+                    <div>
+                        <img src="style/Local business section/Icon (3).png" alt="">
+                    </div>
+                    <div>
+                        <h4>1,926,436</h4>
+                        <p><small>Payments</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
     <!-- Footer Section -->
     <footer>
