--- a/index.html
+++ b/index.html
@@ -146,6 +146,20 @@
             </div>
         </div>
 
+        <!--Design section  -->
+        <div id="design">
+            <div>
+                <img src="style/image/pana.png" alt="">
+            </div>
+            <div id="design-text">
+                <h3 id="design-heading">How to design your site footer like we did</h3>
+                <p id="design-pragraph"><small>Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor, augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. Donec quis erat at libero ultrices mollis. In hac habitasse platea dictumst. Vivamus vehicula leo dui, at porta nisi facilisis finibus. In euismod augue vitae nisi ultricies, non aliquet urna tincidunt. Integer in nisi eget nulla commodo faucibus efficitur quis massa. Praesent felis est, finibus et nisi ac, hendrerit venenatis libero. Donec consectetur faucibus ipsum id gravida.</small></p>
+                <button class="button">Learn More</button>
+            </div>
+        </div>
+
+
+
     </main>
     <!-- Footer Section -->
     <footer>
