added customer section

--- a/index.html
+++ b/index.html
@@ -157,9 +157,23 @@
                 <button class="button">Learn More</button>
             </div>
         </div>
+        <!-- customer section -->
+        <div id="customer">
+            <div><img src="style/image/image 9.png" alt=""></div>
+            <div id="customer-text">
+                <p id="customer-pragraph"><small>Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie mi blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien, vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.</small></p>
+                <h5><span>Tim Smith</span></h5>
+                <p id="customer-title">British Dragon Boat Racing Association</p>
+                <div id="customer-icon">
+                    <img src="style/client-icon/111.png" alt="">
+                    <img src="style/client-icon/222.png" alt="">
+                    <img src="style/client-icon/333.png" alt="">
+                    <img src="style/client-icon/444.png" alt="">
+                    <p><span>Meer all customers---</span></p>
+                </div>
 
-
-
+            </div>
+        </div>
     </main>
     <!-- Footer Section -->
     <footer>
